src/objects/Pan_Card__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Of_Birth__c</fullName>
        <label>Date Of Birth</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>father_s_Name__c</fullName>
        <label>father&apos;s Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Pan Card</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pan Card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pan Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>